# lab_agentic

./: .gitignore  README.md  main.py  pyproject.toml
docs/: report.tex
scripts/: run_servers.py
src/agent/: __init__.py  agent.py  app.py
src/mcp_servers/: __init__.py  calculator_server.py  currency_server.py  finance_server.py  travel_search_server.py  weather_server.py
