[project]
name = "lab-agentic"
version = "0.1.0"
description = "Agentic Travel Planning Assistant using LangChain and MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.4.0",
    "streamlit>=1.40.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "nest-asyncio>=1.6.0",
]
